--- a/spring-web-oauth2-client/src/main/resources/templates/home.html
+++ b/spring-web-oauth2-client/src/main/resources/templates/home.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="navbar navbar-expand-sm bg-primary navbar-dark">
-            <a href="#" class="navbar-brand"><i class="fas fa-user"></i></a>
+            <a href="#" class="navbar-brand"><i class="fas fa-user"><span th:text="${' '+userName}"></span></i></a>
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="https://getbootstrap.com/">Bootstrap</a>
@@ -22,14 +22,30 @@
                     <a class="nav-link active" href="/" th:href="@{/}" >Home</a>
                 </li>
             </ul>
-        </div>
+         </div>
     </div>
     <div class="container">
-        <h1 th:text="${title}">Content Header</h1>
-        <div th:text="${message}" >Message Content</div>
-        <div id="date" th:text="${#dates.format(date)}">Date of message</div>
+        <div style="float: right" th:fragment="logout" sec:authorize="isAuthenticated()">
+            <div style="float:left">
+                <span style="font-weight:bold">User: </span><span sec:authentication="name" th:text="${userName}"></span>
+            </div>
+        </div>
+        <h3>OAuth 2.0 Login with Spring Security</h3>
+        <div>
+            You are successfully logged in <span style="font-weight:bold" th:text="${userName}"></span>
+            via the OAuth 2.0 Client <span style="font-weight:bold" th:text="${clientName}"></span>
+        </div>
+        <div>&nbsp;</div>
+        <div>
+            <span style="font-weight:bold">User Attributes:</span>
+            <ul>
+                <li th:each="userAttribute : ${userAttributes}">
+                    <span style="font-weight:bold" th:text="${userAttribute.key}"></span>: <span th:text="${userAttribute.value}"></span>
+                </li>
+            </ul>
+        </div>
         <form th:action="@{/logout}" method="post">
-            <button type="submit"class="btn btn-primary mb-2">Sign out</button>
+            <button type="submit"class="btn btn-primary mb-2">Logout</button>
         </form>
     </div>
 </body>
